# cpp-mime-magic

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  mime_data.h  mime_node.cpp  mime_node.h
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/src/diagrams/: how_the_format_works.drawio  types.drawio
examples/basic_project/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  MimeMagicConfig.cmake.in  mime_data.h  mime_magicConfig.cmake.in  mime_node.cpp  mime_node.h
src/loader/: loader.cpp  loader.h  loading_error.h  mime_loader.cpp  mime_loader.h
src/node/: mime_data.h  mime_node.cpp  mime_node.h
src/nodes/: basic_mime_node.cpp  basic_mime_node.h  common.h  utils.h
src/nodes/date_node/: date_node.cpp  date_node.h
src/nodes/numeric_node/: numeric_node.cpp  numeric_node.h
src/nodes/string_node/: string_node.cpp  string_node.h
test/: main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/ext/: libtest.h
tests/test-data/correct/: correct-png-file.etl  hard-correct-png-file.etl
tests/test-data/incorrect/: byte-type-error-file.etl  level-error-file.etl  string-type-error-file.etl  value-error.etl
